# KRC

./: .dvlog  .gitignore  .project  AAREADME  AA_notes  ALL.inc.2004jul06  CLAUDE.md  GCMcompare.txt  IDLinterface.txt  KRCEXP.TXT  Makefile  Makefile_original  Makeold  Proctor_crater_krc2004.prt  Proctor_fmt.txt  albvar.f  all_inc  alltes.inp  aveday.f  b_alloc.c  b_c2fstr.c  b_f2cstr.c  b_free.c  bin5r.pro  binding.h  binf5.F  co2pt.f  daycom.inc  deding2.f  definc.sty  eccanom.f  effects.inp  email_2004July.txt  emissivity_temperature_dependant.md  epred.f  evolve.txt  flow.txt  flux_tables.md  fort.2  fort.7  (+144 more)
aaa/: 2team.txt  AAREADME  AAinstall  GenDistro  H3install  HKquick  Makec  Makec1  Makec2011oct25  Makefile  Makefile2006jan25  Makefile2006sep12  Makext  idlPath  makeNotes  q  step1  step2  step2i  step3  step34  step3b  step4  step4b  step6  step61  sysdef.rules
build_test/: debian_12.dockerfile  debian_13.dockerfile  docker-compose.yaml  rhel_10.dockerfile  rhel_8.dockerfile  rhel_9.dockerfile  ubuntu_22.04.dockerfile  ubuntu_24.04.dockerfile  ubuntu_26.04.dockerfile
doc/: 356notes.tex  Beaming.tex  PUG.html  PUG.tex  V34UG.tex  VeRunHistory.tex  VerTest.tex  Vtest.tex  bin5.txt  definc.sty  ds02.txt  ds09.txt  eclipse.tex  evolve.txt  farg.tex  flow.txt  flowV33.txt  heat.bib  helplist.tex  helplist.txt  hporb.tex  krc.ps  krc.tex  liens.txt  mars.bib  moon.bib  newatm.tex  newcom.sty  notes  onelay.tex  simple.tex  tun.tex  type52map  v34p.tex
example/: example_table.txt  krc_tab.inp
idl/: bin5.pro  bytepad.pro  chart.pro  clot.pro  color24bit.pro  (+47 more)
(+669 files in other folders)
